@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp4.ex1.code {
    class be.isims.ihm.dp.tp4.ex1.code.CompteBancaire {
        - solde : double
        + CompteBancaire()
        + depot()
        + getSolde()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex1.code {
    class be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm {
        - champ : JTextField
        - historique : JTextArea
        - total : JLabel
        + CompteBancaireFrm()
        + getValue()
        + setTotal()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex1.code {
    class be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm.AjouteMontantEcouteur {
        + AjouteMontantEcouteur()
        + getSolde()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex1.code {
    class be.isims.ihm.dp.tp4.ex1.code.CompteBancaireTest {
        {static} + main()
    }
  }
  

  be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm +-down- be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm.AjouteMontantEcouteur
  be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm.AjouteMontantEcouteur o-- be.isims.ihm.dp.tp4.ex1.code.CompteBancaire : compte
  be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm.AjouteMontantEcouteur o-- be.isims.ihm.dp.tp4.ex1.code.CompteBancaireFrm : fenetre


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
